--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.profiles.active=local
 spring.datasource.url=jdbc:h2:tcp://localhost/~/community
 spring.datasource.username=sa
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.springframework.jdbc=debug
 
