--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 
 spring.profiles.active=local
-spring.datasource.url=jdbc:h2:tcp://localhost/~/community
+spring.datasource.url=jdbc:h2:~/community2
 spring.datasource.username=sa
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.springframework.jdbc=debug
 
-mybatis.type-aliases-package=community.community.domain
-mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.hello.itemservice.repository.mybatis=trace
 
 logging.level.org.hibernate.SQL=DEBUG
