--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.profiles.active=local
-spring.datasource.url=jdbc:h2:~/community2
+spring.datasource.url=jdbc:h2:tcp://localhost/~/community2
 spring.datasource.username=sa
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
