--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -11,3 +11,4 @@ logging.level.hello.itemservice.repository.mybatis=trace
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+server.servlet.session.timeout=1800
